fix invisible navigation link covering first two social icons in footer

--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -60,7 +60,7 @@
         height: 100vh;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -30%; //fixed invisible nav link covering first two footer social icons, also see line 123
         z-index: 1500;
         opacity: 0;
         width: 0;
@@ -82,6 +82,7 @@
     }
 
     &__link {
+
         &:link,
         &:visited {
             display: inline-block;
@@ -99,6 +100,8 @@
                 margin-right: 1.5rem;
                 display: inline-block;
             }
+
+
         }
         
         &:hover,
@@ -120,6 +123,11 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+
     }
 
 
@@ -186,3 +194,5 @@
     background-repeat: no-repeat;
     
   }
+
+  
